<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/md_keylines"
    android:layout_marginRight="@dimen/md_keylines"
    android:layout_marginBottom="@dimen/md_keylines"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:contentDescription="@string/imagen"
            android:scaleType="centerCrop"
            tools:src="@drawable/logo" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_title_height"
            android:layout_alignBottom="@+id/card_image"
            android:layout_marginStart="@dimen/md_keylines"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorWhite"
            tools:text="@string/title_menu" />

        <TextView
            android:id="@+id/card_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_image"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginBottom="@dimen/md_keylines"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/contentGps" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_button"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_text"
            android:text="Action"
            android:textColor="?attr/colorPrimary" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>